<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" >ShopList</string>
    <string name="action_settings" >Settings</string>
    <string name="add_new_element">Add new shopping item</string>
    <string name="add_new_element_button">Add</string>
    <string name="element_detail_title">Large Text</string>
    <string name="action_help">Help</string>
    <string name="action_new_shopList">Add ShopList</string>
    <string name="new_shopList_budget_hint">Budget</string>
    <string name="new_shopList_name_hint">List Name</string>
    <string name="add_new_shopList">Add</string>
    <string name="cancel">Cancel</string>
    <string name="action_new_shopListElement">Add element</string>
    <string name="new_shop_list_element_quantity_hint">Quantity</string>
    <string name="new_shop_list_element_price_hint">Price</string>
    <string name="new_shop_list_element_name">Name</string>
    <string name="add_new_shopList_element">Add</string>
    <string name="shop_list_available_budget">Available Budget</string>
    <string name="shop_list_available_budget_small">Budget:</string>
    <string name="shop_list_total">Total</string>
    <string name="shop_list_quantity_small">Items:</string>
    <string name="shop_list_element_taxable">Taxable</string>
    <string name="shop_list_element_total_amount">Total</string>
    <string name="shop_list_element_tax_amount">Tax</string>
    <string name="shop_list_element_quantity">Quantity</string>
    <string name="shop_list_element_price">Price</string>
    <string name="shop_list_element_image_content_description">shopListElementName</string>
    <string name="shop_list_element_cancel_button">Cancel</string>
    <string name="shop_list_element_save_button">Save</string>

</resources>
