<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:paddingLeft="12dp" android:paddingRight="12dp">
    <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            >
        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/shop_list_element_price"
                    android:id="@+id/shop_list_element_price_label"
                    android:layout_column="1" android:layout_weight="1"/>
            <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/shop_list_element_price"
                    android:layout_column="3"
                    android:layout_weight="1" android:inputType="numberDecimal" android:gravity="right"/>
        </TableRow>
        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/shop_list_element_quantity"
                    android:id="@+id/shop_list_element_quantity_label" android:layout_column="1" android:layout_weight="1"/>
            <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/shop_list_element_quantity" android:layout_column="3"
                    android:layout_weight="1" android:inputType="numberSigned" android:gravity="right"/>
        </TableRow>
        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/shop_list_element_tax_amount"
                    android:id="@+id/shop_list_element_tax_amount_label" android:layout_column="1" android:layout_weight="1"/>
            <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/shop_list_element_tax_amount" android:layout_column="3"
                    android:layout_weight="1" android:inputType="numberDecimal" android:gravity="right"/>
        </TableRow>
        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/shop_list_element_total_amount"
                    android:id="@+id/shop_list_element_total_amount_label" android:layout_column="1" android:layout_weight="1"/>
            <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/shop_list_element_total_amount" android:layout_column="3"
                    android:layout_weight="1" android:inputType="numberDecimal" android:editable="false"
                    android:gravity="right"/>
        </TableRow>
        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
            <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shop_list_element_taxable"
                    android:id="@+id/shop_list_element_taxable" android:layout_column="1" android:checked="false"
                    />
        </TableRow>
        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
            <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/shop_list_element_image" android:layout_column="1" android:layout_weight="1"
                    android:contentDescription="@string/shop_list_element_image_content_description"/>
        </TableRow>
    </TableLayout>
</RelativeLayout>