<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
                android:layout_height="match_parent"
                xmlns:tools="http://schemas.android.com/tools"
                xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@android:color/holo_orange_dark"
            android:id="@+id/relativeLayout"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true" android:paddingLeft="12dp" android:paddingRight="12dp"
            android:paddingTop="6dp" android:paddingBottom="6dp">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/shop_list_available_budget"
                android:id="@+id/shop_list_available_budget"
                android:layout_gravity="left"
                android:textColor="@android:color/white"
                android:layout_alignTop="@+id/shop_list_available_budget_value" android:layout_alignParentLeft="true"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/shop_list_available_budget_value"
                android:layout_gravity="right"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:textColor="@android:color/white"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/shop_list_available_budget_small"
                android:id="@+id/shop_list_available_budget_small"
                android:layout_below="@+id/shop_list_available_budget"
                android:layout_alignLeft="@+id/shop_list_available_budget"
                android:textColor="@android:color/white"
                android:textSize="12dp" android:textIsSelectable="false"/>
    </RelativeLayout>

    <ListView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/shopList_list_view"
            tools:listitem="@layout/view_shop_list_element_list"
            android:layout_below="@+id/relativeLayout" android:layout_above="@+id/separator"
            android:layout_gravity="center">
    </ListView>

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_alignParentLeft="true"
            android:id="@+id/separator"
            android:layout_above="@+id/relativeLayout2" android:background="@android:color/holo_orange_dark">
    </LinearLayout>

    <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_alignParentBottom="true" android:id="@+id/relativeLayout2" android:paddingLeft="12dp"
            android:paddingRight="12dp" android:paddingTop="6dp" android:paddingBottom="6dp">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/shop_list_total"
                android:id="@+id/shop_list_total" android:layout_alignParentTop="true" android:layout_alignParentLeft="true"
                />
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/shop_list_total_value" android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/shop_list_quantity_small"
                android:id="@+id/shop_list_quantity_small" android:layout_below="@+id/shop_list_total"
                android:layout_alignParentLeft="true" android:textSize="12dp"/>
    </RelativeLayout>

</RelativeLayout>